# job_worker_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.deucalion.yml  docker-compose.local.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: worker_runtime_overview.md
scripts/: local_worker.sh  setup_worker.sh
tests/: test_agent.py  test_agent_integration.py  test_cli.py  test_deucalion_config.py  test_deucalion_executor.py  test_deucalion_slurm.py  test_ssh_client.py
worker_agent/: __init__.py  agent.py  cli.py
worker_agent/deucalion/: __init__.py  config.py  slurm.py  ssh_client.py
worker_agent/executors/: __init__.py  base.py  deucalion_executor.py  docker_executor.py
